# orca-prop-parse

./: .gitattributes  LICENSE  README.md  pyproject.toml  test_files.tar.bz2
orca_spec/: 9.4. Property File - ORCA 6.1 Manual.html  orca_json.py  orca_prop_spec.json  orca_prop_spec_py.json  parse_prop_html.py  spec_gen.ipynb
orca_spec/calc_info/: __init__.py  calculation_info.py  calculation_status.py  calculation_timings.py  scf_timings.py  single_point_data.py
orca_spec/core/: __init__.py  broken_symmetry.py  cipsi_energies.py  dft_energy.py  energy.py  energy_extrapolation.py  gcp_energy.py  geometry.py  mdci_led.py  natural_orbitals.py  nuclear_gradient.py  solvation_details.py  vdw_correction.py
orca_spec/elprop/: __init__.py  dipole_moment.py  hyperpolarizability.py  polarizability.py  quadrupole_moment.py
orca_spec/eprnmr/: __init__.py  a_tensor.py  chemical_shift.py  d_tensor.py  efg_tensor.py  g_tensor.py  spin_spin_coupling.py
orca_spec/excited_states/: __init__.py  absorption_spectrum.py  ecd_spectrum.py  excited_states_dynamics.py  mdci_eom_energies.py  rocis_energies.py  steom.py
orca_spec/freq/: __init__.py  dboc_energy.py  hessian.py  soc_energy_correction.py  thermochemistry_energies.py
orca_spec/population_analysis/: __init__.py  chelpg.py  hirshfeld.py  loewdin.py  mayer.py  mbis.py  mulliken.py
src/orca_prop_parse/: __init__.py  cli.py  prop_parse.py
