[project]
name = "orca-prop-parse"
version = "0.1.0"
description = "Python libraries and scripts for parsing ORCA property files."
readme = "README.md"
authors = [
    { name = "Brock Dyer", email = "brockdyer03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rtoml>=0.13.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
json-spec = [
    "pydantic>=2.12.5",
]
lint = [
    "ruff>=0.15.9",
]
notebook = [
    "ipykernel>=7.2.0",
]
